tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/ConfigMap.2030960839.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: external-forward-proxy-config
data:
  envoy.yaml: |-
    admin:
      address:
        socketAddress:
          address: 127.0.0.1
          ipv4Compat: true
          portValue: 9902
    staticResources:
      clusters:
      - clusterType:
          name: envoy.clusters.dynamic_forward_proxy
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dnsCacheConfig:
              name: dynamic_forward_proxy_cache_config
              typedDnsResolverConfig:
                name: envoy.network.dns_resolver.cares
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                  dnsResolverOptions:
                    noDefaultSearchDomain: true
                    useTcpForDnsLookups: true
                  resolvers:
                  - socketAddress:
                      address: 8.8.8.8
                      ipv4Compat: true
                      portValue: 53
                  useResolversAsFallback: true
        lbPolicy: CLUSTER_PROVIDED
        name: dynamic_forward_proxy_cluster
      listeners:
      - address:
          socketAddress:
            address: '::'
            ipv4Compat: true
            portValue: 3128
        filterChains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              accessLog:
              - name: envoy.access_loggers.file
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  logFormat:
                    textFormatSource:
                      inlineString: |
                        [%START_TIME%] http_forward_proxy_3128 "%PROTOCOL% %REQ(:METHOD)% %REQ(:AUTHORITY)%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS%
                  path: /dev/stdout
              codecType: HTTP1
              httpFilters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dnsCacheConfig:
                    name: dynamic_forward_proxy_cache_config
                    typedDnsResolverConfig:
                      name: envoy.network.dns_resolver.cares
                      typedConfig:
                        '@type': type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                        dnsResolverOptions:
                          noDefaultSearchDomain: true
                          useTcpForDnsLookups: true
                        resolvers:
                        - socketAddress:
                            address: 8.8.8.8
                            ipv4Compat: true
                            portValue: 53
                        useResolversAsFallback: true
              - name: envoy.filters.http.router
              httpProtocolOptions: {}
              routeConfig:
                name: default
                virtualHosts:
                - domains:
                  - '*'
                  name: http_forward_proxy
                  routes:
                  - match:
                      connectMatcher: {}
                    route:
                      cluster: dynamic_forward_proxy_cluster
                      upgradeConfigs:
                      - connectConfig: {}
                        upgradeType: CONNECT
              statPrefix: http_forward_proxy
        name: http_forward_proxy_3128
        statPrefix: http_forward_proxy_3128
      - address:
          socketAddress:
            address: '::'
            ipv4Compat: true
            portValue: 4128
        filterChains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              accessLog:
              - name: envoy.access_loggers.file
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  logFormat:
                    textFormatSource:
                      inlineString: |
                        [%START_TIME%] http_forward_proxy_4128 "%PROTOCOL% %REQ(:METHOD)% %REQ(:AUTHORITY)%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS%
                  path: /dev/stdout
              codecType: HTTP1
              httpFilters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dnsCacheConfig:
                    name: dynamic_forward_proxy_cache_config
                    typedDnsResolverConfig:
                      name: envoy.network.dns_resolver.cares
                      typedConfig:
                        '@type': type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                        dnsResolverOptions:
                          noDefaultSearchDomain: true
                          useTcpForDnsLookups: true
                        resolvers:
                        - socketAddress:
                            address: 8.8.8.8
                            ipv4Compat: true
                            portValue: 53
                        useResolversAsFallback: true
              - name: envoy.filters.http.router
              httpProtocolOptions: {}
              routeConfig:
                name: default
                virtualHosts:
                - domains:
                  - '*'
                  name: http_forward_proxy
                  routes:
                  - match:
                      connectMatcher: {}
                    route:
                      cluster: dynamic_forward_proxy_cluster
                      upgradeConfigs:
                      - connectConfig: {}
                        upgradeType: CONNECT
              statPrefix: http_forward_proxy
          transportSocket:
            name: envoy.transport_sockets.tls
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              commonTlsContext:
                tlsCertificates:
                - certificateChain:
                    filename: /etc/envoy/external-forward-proxy-cert.pem
                  privateKey:
                    filename: /etc/envoy/external-forward-proxy-key.pem
        name: http_forward_proxy_4128
        statPrefix: http_forward_proxy_4128
      - address:
          socketAddress:
            address: '::'
            ipv4Compat: true
            portValue: 5128
        filterChains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              accessLog:
              - name: envoy.access_loggers.file
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  logFormat:
                    textFormatSource:
                      inlineString: |
                        [%START_TIME%] http_forward_proxy_5128 "%PROTOCOL% %REQ(:METHOD)% %REQ(:AUTHORITY)%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS%
                  path: /dev/stdout
              codecType: HTTP2
              http2ProtocolOptions:
                allowConnect: true
              httpFilters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dnsCacheConfig:
                    name: dynamic_forward_proxy_cache_config
                    typedDnsResolverConfig:
                      name: envoy.network.dns_resolver.cares
                      typedConfig:
                        '@type': type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                        dnsResolverOptions:
                          noDefaultSearchDomain: true
                          useTcpForDnsLookups: true
                        resolvers:
                        - socketAddress:
                            address: 8.8.8.8
                            ipv4Compat: true
                            portValue: 53
                        useResolversAsFallback: true
              - name: envoy.filters.http.router
              routeConfig:
                name: default
                virtualHosts:
                - domains:
                  - '*'
                  name: http_forward_proxy
                  routes:
                  - match:
                      connectMatcher: {}
                    route:
                      cluster: dynamic_forward_proxy_cluster
                      upgradeConfigs:
                      - connectConfig: {}
                        upgradeType: CONNECT
              statPrefix: http_forward_proxy
        name: http_forward_proxy_5128
        statPrefix: http_forward_proxy_5128
      - address:
          socketAddress:
            address: '::'
            ipv4Compat: true
            portValue: 6128
        filterChains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              accessLog:
              - name: envoy.access_loggers.file
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  logFormat:
                    textFormatSource:
                      inlineString: |
                        [%START_TIME%] http_forward_proxy_6128 "%PROTOCOL% %REQ(:METHOD)% %REQ(:AUTHORITY)%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS%
                  path: /dev/stdout
              codecType: HTTP2
              http2ProtocolOptions:
                allowConnect: true
              httpFilters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dnsCacheConfig:
                    name: dynamic_forward_proxy_cache_config
                    typedDnsResolverConfig:
                      name: envoy.network.dns_resolver.cares
                      typedConfig:
                        '@type': type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                        dnsResolverOptions:
                          noDefaultSearchDomain: true
                          useTcpForDnsLookups: true
                        resolvers:
                        - socketAddress:
                            address: 8.8.8.8
                            ipv4Compat: true
                            portValue: 53
                        useResolversAsFallback: true
              - name: envoy.filters.http.router
              routeConfig:
                name: default
                virtualHosts:
                - domains:
                  - '*'
                  name: http_forward_proxy
                  routes:
                  - match:
                      connectMatcher: {}
                    route:
                      cluster: dynamic_forward_proxy_cluster
                      upgradeConfigs:
                      - connectConfig: {}
                        upgradeType: CONNECT
              statPrefix: http_forward_proxy
          transportSocket:
            name: envoy.transport_sockets.tls
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              commonTlsContext:
                tlsCertificates:
                - certificateChain:
                    filename: /etc/envoy/external-forward-proxy-cert.pem
                  privateKey:
                    filename: /etc/envoy/external-forward-proxy-key.pem
        name: http_forward_proxy_6128
        statPrefix: http_forward_proxy_6128
    
  external-forward-proxy-key.pem: |-
    -----BEGIN PRIVATE KEY-----
    MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDGHRlNhAl5Lepe
[...]
    EQxZqImQjGqvfARaVJe8l04=
    -----END PRIVATE KEY-----
    
  external-forward-proxy-cert.pem: |-
    -----BEGIN CERTIFICATE-----
    MIIDaTCCAlGgAwIBAgIUIDg9s7k6ZgW9cLajcB1XGQOAm1YwDQYJKoZIhvcNAQEL
[...]
    7kBnydXkw9KfH84kpA==
    -----END CERTIFICATE-----
