tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/DestinationRule.833634116.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tunnel-outbound-traffic-to-external-svc-via-external-forward-proxy
spec:
  host: external-forward-proxy.external-1-46602.svc.cluster.local
  subsets:
  - name: external-svc-tcp
    trafficPolicy:
      tunnel:
        targetHost: external.external-1-46602
        targetPort: 86
  - name: external-svc-tls
    trafficPolicy:
      tunnel:
        targetHost: external.external-1-46602
        targetPort: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-outbound-traffic-to-external-forward-proxy
spec:
  host: external-forward-proxy.external-1-46602.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 4128
      tls:
        mode: SIMPLE
        sni: external-forward-proxy.external-1-46602.svc.cluster.local
