tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/Gateway.212027257.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aks-istio-egressgateway
spec:
  selector:
    istio: aks-istio-egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: TLS
    hosts:
    - external.external-1-46602.svc.cluster.local
    tls:
      mode: ISTIO_MUTUAL
  - port:
      number: 443
      name: https
      protocol: TLS
    hosts:
    - external.external-1-46602.svc.cluster.local
    tls:
      mode: ISTIO_MUTUAL
