tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/Gateway.2411966579.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aks-istio-egressgateway
spec:
  selector:
    istio: aks-istio-egressgateway 
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - external.external-1-46602.svc.cluster.local
    tls:
      mode: PASSTHROUGH
