tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/Gateway.735407817.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aks-istio-egressgateway
spec:
  selector:
    istio: aks-istio-egressgateway
  servers:
  - port:
      number: 80
      name: tcp-80
      protocol: TCP
    hosts:
    - external.external-1-46602.svc.cluster.local
  - port:
      number: 443
      name: tcp-443
      protocol: TCP
    hosts:
    - external.external-1-46602.svc.cluster.local
