tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/Service.2280439109.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-forward-proxy
spec:
  selector:
    app: external-forward-proxy
  ports:
  - name: http-connect-0
    port: 3128
    targetPort: 3128
    protocol: TCP
  - name: http-connect-1
    port: 4128
    targetPort: 4128
    protocol: TCP
  - name: http2-connect-2
    port: 5128
    targetPort: 5128
    protocol: TCP
  - name: http2-connect-3
    port: 6128
    targetPort: 6128
    protocol: TCP
