tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/VirtualService.2802136892.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mesh-route-outbound-traffic-to-external-svc-via-egress-gw
spec:
  hosts:
  - external.external-1-46602.svc.cluster.local
  gateways:
  - mesh
  tcp:
  - match:
    - port: 86
    route:
    - destination:
        host: aks-istio-egressgateway.aks-istio-egress.svc.cluster.local
        subset: originate-tls-for-plain-traffic
        port:
          number: 443
  tls:
  - match:
    - port: 443
      sniHosts:
      - external.external-1-46602.svc.cluster.local
    route:
    - destination:
        host: aks-istio-egressgateway.aks-istio-egress.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-gw-route-outbound-traffic-to-external-svc-via-external-forward-proxy
spec:
  hosts:
  - external.external-1-46602.svc.cluster.local
  gateways:
  - aks-istio-egressgateway
  tls:
  - match:
    - gateways:
      - aks-istio-egressgateway
      port: 443
      sniHosts:
      - external.external-1-46602.svc.cluster.local
    route:
    - destination:
        host: external-forward-proxy.external-1-46602.svc.cluster.local
        subset: external-svc-tls
        port:
          number: 5128
