tests/integration/pilot/test_artifacts/pilot-d060012dd9a84242a3891cf54/TestTunnelingOutboundTraffic/_test_context/VirtualService.665789715.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-outbound-traffic-to-external-app-via-external-forward-proxy
spec:
  hosts:
  - external.external-1-46602.svc.cluster.local
  gateways:
  - mesh
  tcp:
  - match:
    - port: 86
    route:
    - destination:
        host: external-forward-proxy.external-1-46602.svc.cluster.local
        subset: external-svc-tcp
        port:
          number: 6128
  tls:
  - match:
    - sniHosts:
      - external.external-1-46602.svc.cluster.local
      port: 443
    route:
    - destination:
        host: external-forward-proxy.external-1-46602.svc.cluster.local
        subset: external-svc-tls
        port:
          number: 6128
